# pyfanity

./: LICENSE  MANIFEST.in  README.md  build.sh  setup.cfg
data/: profanity_short.txt
pyfanity/: __init__.py  pyfanity.py
pyfanity/data/: profanity.json
src/Pyfanity_LandonHarter.egg-info/: PKG-INFO  SOURCES.txt
src/pyfanity/: pyfanity.py
