[metadata]
name = pyfanity
version = 0.0.1
author = Landon Harter
author_email = landonharter@outlook.com
description = Find and censor profane words in your text
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LandonHarter/pyfanity
project_urls =
    Bug Tracker = https://github.com/LandonHarter/pyfanity/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
